--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "typescript": "^4.1.3"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "helmet": "^4.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "tsc-node": "0.0.3"
+    "tsc-node": "0.0.3",
+    "uuid": "^8.3.2"
   }
 }
