--- a/client/package.json
+++ b/client/package.json
@@ -54,5 +54,6 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/react-copy-to-clipboard": "^5.0.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
