--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc && node ./server.js"
+    "build": "tsc && node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/express-fileupload": "^1.1.6",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "typescript": "^4.1.3"
@@ -23,7 +22,6 @@
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
     "express-subdomain": "^1.0.5",
     "express-upload": "^0.1.0",
     "helmet": "^4.3.1",
