--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express-upload": "^0.1.0",
     "helmet": "^4.3.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "tsc-node": "0.0.3",
     "uuid": "^8.3.2"
